Use free() instead of PQfreemem() to maintain compabitibility with older PostgreSQL client libraries (bug #33813).